# planar_separators

./: .gitignore  CMakeLists.txt  README.md
include/: property_recorder.h  utils.h
instances/: README.md  properties.xml
instances/city/: Köln.gml  Lindlar.chaco  Lindlar.gml  München.gml  Osnabrück.chaco  Osnabrück.gml  San Francisco.gml
instances/delaunay/: delaunay_1000.gml  delaunay_10000.gml  delaunay_16000.gml  delaunay_2000.gml  delaunay_5000.gml  delaunay_8000.gml
instances/delaunay_large/: delaunay_20000.gml
instances/delaunay_small/: delaunay_100.gml  delaunay_1500.gml  delaunay_200.gml  delaunay_2500.gml  delaunay_300.gml  delaunay_3000.gml  delaunay_3500.gml  delaunay_400.gml  delaunay_4000.gml  delaunay_4500.gml  delaunay_500.gml  delaunay_600.gml  delaunay_700.gml  delaunay_800.gml  delaunay_900.gml
instances/diameter/: diameter_3333.gml
instances/europe/: Barcelona.gml  Belgrade.gml  Berlin.gml  Birmingham.gml  Budapest.gml  Cologne.gml  Hamburg.gml  London.gml  Madrid.gml  Milan.gml  Moscow.gml  Odessa.gml  Paris.gml  Prague.gml  Rome.gml  Saint Petersburg.gml  Sofia.gml  Vienna.gml  Warsaw.gml
instances/globe/: globe_100_100.gml  globe_10_1000.gml  globe_25_25.gml  globe_50_100.gml  globe_50_50.gml  globe_75_75.gml
instances/grid/: grid_100.gml
instances/ogdf/: ogdf-max_10000.gml
instances/random/: random_10000_0.gml  random_10000_1.gml  random_10000_2.gml  random_1000_0.gml  random_1000_1.gml  random_1000_2.gml  random_125_0.gml  random_125_1.gml  random_125_2.gml  random_15000_0.gml  random_15000_1.gml  random_15000_2.gml  random_16000_0.gml  random_16000_1.gml  random_16000_2.gml  random_20000_0.gml  random_20000_1.gml  random_20000_2.gml  random_2000_0.gml  random_2000_1.gml  random_2000_2.gml  random_25000_0.gml  random_25000_1.gml  random_25000_2.gml  random_250_0.gml  random_250_1.gml  random_250_2.gml  random_30000_0.gml  random_30000_1.gml  random_30000_2.gml  random_32000_0.gml  random_32000_2.gml  random_4000_0.gml  random_4000_1.gml  random_4000_2.gml  random_5000_0.gml  random_5000_1.gml  random_5000_2.gml  random_500_0.gml  random_500_1.gml  (+4 more)
instances/rect/: rect_500_20.gml
instances/sixgrid/: sixgrid_237_20.gml
instances/sphere/: sphere_4.gml  sphere_5.gml
instances/tests/: README.md
instances/triangular/: triangular_100.gml  triangular_7.gml
instances/twin/: c-globe_9792.gml  c-grid_10087.gml
resources/city/: Berlin.chaco  Köln.chaco  Lindlar.chaco  München.chaco  (+2 more)
results/: LT_compare.csv  data_Mon_Dec__6_16-41-35_v1.0.csv  data_Mon_Dec__6_18-48-45_v1.0.csv  data_Mon_Dec__6_19-18-38_v1.0.csv  data_Mon_Dec__6_23-42-26_v1.0.csv  data_Sun_Dec__5_18-34-50_v1.0.csv  data_Thu_Nov_18_13-30-18_v1.0.csv  data_Thu_Nov_18_15-48-10_v1.0.csv  data_Thu_Nov_18_22-26-41_v1.0.csv  data_Thu_Nov_18_22-43-09_v1.0.csv  times.csv
scripts/: analyse_triangulated_LT.py  create_table.py  data_analysis.py  diameter_analysis.py  exit_analysis.py  heuristic_comparison.py  map_generator.py  sanity.py  speed_analysis.py  test.py  utils.py
src/: instance_generator.cpp  main.cpp  property_recorder.cpp  record_properties.cpp  triangulation.cpp  utils.cpp  workbench.cpp
tmp/: times.csv  times2.csv  times3.csv  times4.csv
(+89 files in other folders)
